--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^21.1.1",
+    "msw": "^1.2.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vitest": "^0.30.1"
