--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vitest": "^0.30.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
