--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ts-vite-testing-library-template",
+  "name": "focused-ui-with-react-reducers",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "test:update-snapshot": "vitest run --update"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -32,11 +33,5 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vitest": "^0.30.1"
-  },
-  "msw": {
-    "workerDirectory": "public"
-  },
-  "workspaces": [
-    "packages/thunk-reducer"
-  ]
+  }
 }
