--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "msw": "^1.2.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "zustand": "^4.3.8"
   }
 }
